# python-git-function-testing

./: .gitignore  README.md  main.py  pyproject.toml  spec.md
git_function_testing/: git.py
tests/: test_git.py  test_git_utils.py
