[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-function-testing"
version = "0.1.0"
description = "Git branch detection function with tests"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.hatch.envs.test]
dependencies = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
]

[tool.hatch.envs.test.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=src --cov-report=term-missing tests {args}"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
